--- a/bin/docker-compose.yml
+++ b/bin/docker-compose.yml
@@ -11,3 +11,34 @@ services:
       MYSQL_USER: ${MOODLE_DOCKER_DBUSER}
       MYSQL_ROOT_PASSWORD: ${MOODLE_DOCKER_DBPASS}
       MYSQL_PASSWORD: ${MOODLE_DOCKER_DBPASS}
+
+  ava:
+    image: "moodlehq/moodle-php-apache:7.1"
+    volumes:
+      - "${MOODLE_DOCKER_APACHE_CONFIG}/apache2_mailhog.conf:/etc/apache2/conf-enabled/apache2_mailhog.conf"
+      - "${MOODLE_DOCKER_AVA_WWWROOT}:/var/www/html/ava"
+      - "${MOODLE_DOCKER_AVA_DATA}:/var/www/moodledata"
+      - "${MOODLE_DOCKER_AVA_CONFIG}:/var/www/html/ava/config.php"
+    working_dir: /var/www/html/ava/
+    env_file:
+      - .env
+    ports:
+      - "${MOODLE_DOCKER_AVA_PORT}:80"
+  #   depends_on:
+  #     - mailhog
+
+  # mailhog:
+  #   image: mailhog/mailhog
+
+  # memcached0:
+  #   image: memcached:1.4
+  # memcached1:
+  #   image: memcached:1.4
+  # redis:
+  #   image: redis:3
+  # solr:
+  #   image: solr:6.5
+  #   entrypoint:
+  #     - docker-entrypoint.sh
+  #     - solr-precreate
+  #     - test
