--- a/bin/example.env
+++ b/bin/example.env
@@ -1,14 +1,22 @@
 COMPOSE_PROJECT_NAME=ava
 
-MOODLE_DOCKER_AVA_PORT=80
-MOODLE_DOCKER_AVA_HOST=http://localhost/ava
+
+MOODLE_DOCKER_APACHE_PORT=80
+MOODLE_DOCKER_APACHE_CONFIG=../conf/apache
 
 MOODLE_DOCKER_AVA_WWWROOT=../apps/ava
-MOODLE_DOCKER_APACHE_CONFIG=../conf/apache
 MOODLE_DOCKER_AVA_CONFIG=../conf/ava/config.php
 MOODLE_DOCKER_AVA_DATA=../volumes/moodledata
-MOODLE_DOCKER_MYSQL_DATA=../volumes/moodledata
+MOODLE_DOCKER_AVA_HOST=http://localhost/ava
 
+DEPLOY_LANG=pt_BR
+DEPLOY_ADMIN_USER=admin
+DEPLOY_ADMIN_PASS=admin
+DEPLOY_ADMIN_MAIL=admin@admin.com
+DEPLOY_FULLNAME='Ambiente Virtual de Aprendizagem'
+DEPLOY_SHORTNAME=AVA
+
+MOODLE_DOCKER_DBDIR=../volumes/moodledata
 MOODLE_DOCKER_DBTYPE=mariadb
 MOODLE_DOCKER_DBHOST=db
 MOODLE_DOCKER_DBNAME=ava_base
