--- a/bin/example.env
+++ b/bin/example.env
@@ -16,7 +16,7 @@ DEPLOY_ADMIN_MAIL=admin@admin.com
 DEPLOY_FULLNAME='Ambiente Virtual de Aprendizagem'
 DEPLOY_SHORTNAME=AVA
 
-MOODLE_DOCKER_DBDIR=../volumes/moodledata
+MOODLE_DOCKER_DBDIR=../volumes/dbdata
 MOODLE_DOCKER_DBTYPE=mariadb
 MOODLE_DOCKER_DBHOST=db
 MOODLE_DOCKER_DBNAME=ava_base
