--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "apps/theme_ledor"]
 	path = apps/theme_ledor
 	url = git@github.com:CoticEaDIFRN/moodle_theme_ledor.git
+[submodule "apps/moodle"]
+	path = apps/moodle
+	url = git@github.com:CoticEaDIFRN/moodle.git
+[submodule "apps/ava"]
+	path = apps/ava
+	url = https://github.com/moodle/moodle.git
