[ADD] dev moodle container

--- a/bin/example.env
+++ b/bin/example.env
@@ -9,6 +9,11 @@ MOODLE_DOCKER_AVA_CONFIG=../conf/ava/config.php
 MOODLE_DOCKER_AVA_DATA=../volumes/moodledata
 MOODLE_DOCKER_AVA_HOST=http://localhost/ava
 
+MOODLE_DOCKER_DEV_WWWROOT=../apps/dev
+MOODLE_DOCKER_DEV_CONFIG=../conf/dev/config.php
+MOODLE_DOCKER_DEV_DATA=../volumes/moodledatadev
+MOODLE_DOCKER_DEV_HOST=http://localhost/dev
+
 DEPLOY_LANG=pt_BR
 DEPLOY_ADMIN_USER=admin
 DEPLOY_ADMIN_PASS=admin
