--- a/bin/docker-compose.yml
+++ b/bin/docker-compose.yml
@@ -31,6 +31,22 @@ services:
   #   depends_on:
   #     - mailhog
 
+  dev:
+    image: "moodlehq/moodle-php-apache:7.1"
+    volumes:
+      - "${MOODLE_DOCKER_APACHE_CONFIG}/apache2_mailhog.conf:/etc/apache2/conf-enabled/apache2_mailhog.conf"
+      - "${MOODLE_DOCKER_DEV_WWWROOT}:/var/www/html/moodle"
+      - "${MOODLE_DOCKER_DEV_DATA}:/var/www/moodledatadev"
+      - "${MOODLE_DOCKER_DEV_CONFIG}:/var/www/html/dev/config.php"
+      - "../apps/theme_ledor:/var/www/html/dev/theme/ledor"
+    working_dir: /var/www/html/dev/
+    env_file:
+      - .env
+    ports:
+      - "${MOODLE_DOCKER_APACHE_PORT}:80"
+  #   depends_on:
+  #     - mailhog
+
   # memcached:
   #   image: memcached:1.4
   # redis:
