[UPD] example.env

--- a/bin/example.env
+++ b/bin/example.env
@@ -2,17 +2,19 @@ COMPOSE_PROJECT_NAME=ava
 
 
 MOODLE_DOCKER_APACHE_PORT=80
+MOODLE_DOCKER_DEV_APACHE_PORT=81
 MOODLE_DOCKER_APACHE_CONFIG=../conf/apache
 
 MOODLE_DOCKER_AVA_WWWROOT=../apps/ava
 MOODLE_DOCKER_AVA_CONFIG=../conf/ava/config.php
 MOODLE_DOCKER_AVA_DATA=../volumes/moodledata
-MOODLE_DOCKER_AVA_HOST=http://localhost/ava
+MOODLE_DOCKER_AVA_HOST=http://localhost:8080/ava
+MOODLE_DOCKER_AVA_MOODLEDATA=/var/moodledata
 
 MOODLE_DOCKER_DEV_WWWROOT=../apps/dev
 MOODLE_DOCKER_DEV_CONFIG=../conf/dev/config.php
 MOODLE_DOCKER_DEV_DATA=../volumes/moodledatadev
-MOODLE_DOCKER_DEV_HOST=http://localhost/dev
+MOODLE_DOCKER_DEV_HOST=http://localhost:8081/dev
 
 DEPLOY_LANG=pt_BR
 DEPLOY_ADMIN_USER=admin
