--- a/bin/example.env
+++ b/bin/example.env
@@ -8,13 +8,8 @@ MOODLE_DOCKER_APACHE_CONFIG=../conf/apache
 MOODLE_DOCKER_AVA_WWWROOT=../apps/ava
 MOODLE_DOCKER_AVA_CONFIG=../conf/ava/config.php
 MOODLE_DOCKER_AVA_DATA=../volumes/moodledata
-MOODLE_DOCKER_AVA_HOST=http://localhost:8080/ava
+MOODLE_DOCKER_AVA_HOST=http://localhost/ava
 MOODLE_DOCKER_AVA_MOODLEDATA=/var/moodledata
-
-MOODLE_DOCKER_DEV_WWWROOT=../apps/dev
-MOODLE_DOCKER_DEV_CONFIG=../conf/dev/config.php
-MOODLE_DOCKER_DEV_DATA=../volumes/moodledatadev
-MOODLE_DOCKER_DEV_HOST=http://localhost:8081/dev
 
 DEPLOY_LANG=pt_BR
 DEPLOY_ADMIN_USER=admin
